--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,10 @@ spring:
       ddl-auto: update
     show-sql: true
   datasource:
-    url: jdbc:mysql://192.168.219.107:3306/jmlim_chat?allowPublicKeyRetrieval=true&useSSL=false
+    url: jdbc:mysql://192.168.219.108:3306/jmlim_chat?allowPublicKeyRetrieval=true&useSSL=false
     username: jmlim
     password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+logging.level:
+  org.hibernate.SQL: debug
